--- a/public/playlist.html
+++ b/public/playlist.html
@@ -21,15 +21,30 @@
     <div class="container">
         <p>Start: Pittsburgh</p>
         <p>End: New York City</p>
-        <p>Your Playlist:</p><br />
-        America<br />Frick Park Market<br />Black and Yellow<br />The Only Living Boy In New York<br />
+        <p>Your Playlist:</p>
+        <!-- America<br />Frick Park Market<br />Black and Yellow<br />The Only Living Boy In New York<br />
         New York State of Mind<br />
-        </p>
+        </p> -->
+
+        <div id="generatedPlaylist"></div>
+
+        <script>
+            document.addEventListener('DOMContentLoaded', function () {
+                // Get the country parameter from the URL
+                const urlParams = new URLSearchParams(window.location.search);
+                const selectedLocation = urlParams.get('startingLocation');
+      
+                // Call a function to handle the map display based on the selected country
+                handleSearch(selectedLocation);
+            });
+        </script>
+
         <button onclick = "window.location.href='playlist.html';">Share</button><br />
         <button onclick = "window.location.href='map.html';">Map View <i>(New Feature!)</i></button>
         <p><i>(Shows the location of your playlist)</i></p>
         <button onclick = "window.location.href='delete.html';">Delete</button><br />
     </div>
+    <script src="playlist.js" type="text/javascript"></script>
 </body>
 
 </html>
