--- a/public/create.html
+++ b/public/create.html
@@ -20,7 +20,7 @@
 <body>
     <div class="container">
         <h1>New Trip Playlist</h1>
-        <form action="/create-playlist" method="post">
+        <form onsubmit="inputSearch(event)">
             <!-- Text fields for Starting Location and Destination -->
             <label for="startingLocation"><u>Starting Location:</u></label>
             <input type="text" id="startingLocation" name="startingLocation"><br>
@@ -69,5 +69,6 @@
             <input type="submit" value="Generate Playlist">
         </form>
     </div>
+    <script src="./playlist.js" type="text/javascript"></script>
 </body>
 </html>
